--- a/templates/index.html
+++ b/templates/index.html
@@ -2,34 +2,34 @@
 <html>
 <head>
   <title>Flaskr</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 </head>
 <body>
-  <div class="page">
+  <div class="container">
     <h1>Mon blog de test !</h1>
 
     <div class="metanav">
       {% if not session.logged_in %}
-        <a href="{{ url_for('login') }}">log in</a>
+        <a class="btn btn-success" role="button" href="{{ url_for('login') }}">log in</a>
       {% else %}
-        <a href="{{ url_for('logout') }}">log out</a>
+        <a class="btn btn-warning" role="button" href="{{ url_for('logout') }}">log out</a>
       {% endif %}
     </div>
 
     {% for message in get_flashed_messages() %}
-      <div class="flash">{{ message }}</div>
+      <div class="flash alert alert-success col-sm-4" role="success">{{ message }}</div>
     {% endfor %}
 
     {% block body %}{% endblock %}
 
     {% if session.logged_in %}
-      <form action="{{ url_for('add_articles') }}" method="post" class="add-articles">
+      <form action="{{ url_for('add_articles') }}" method="post" class="add-articles form-group">
         <dl>
           <dt>Title:</dt>
-          <dd><input type="text" size="30" name="titre"></dd>
+          <dd><input type="text" size="30" name="titre" class="form-control col-sm-4"></dd>
           <dt>Text:</dt>
-          <dd><textarea name="contenu" rows="5" cols="40"></textarea></dd>
-          <dd><input type="submit" value="Share"></dd>
+          <dd><textarea name="contenu" rows="5" cols="40" class="form-control col-sm-4"></textarea></dd>
+          <dd><input type="submit" class="btn btn-primary" value="Share"></dd>
         </dl>
       </form>
     {% endif %}
