--- a/templates/login.html
+++ b/templates/login.html
@@ -2,22 +2,22 @@
 <html>
 <head>
   <title>Login</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 </head>
 <body>
-  <div class="page">
+  <div class="container">
     <h1>Mon blog de test</h1>
 
     <div class="metanav">
       {% if not session.logged_in %}
-        <a href="{{ url_for('login') }}">log in</a>
+        <a class="btn btn-primary" ref="{{ url_for('login') }}">log in</a>
       {% else %}
-        <a href="{{ url_for('logout') }}">log out</a>
+        <a class="btn btn-warning" href="{{ url_for('logout') }}">log out</a>
       {% endif %}
     </div>
 
     {% for message in get_flashed_messages() %}
-      <div class="flash">{{ message }}</div>
+      <div class="flash alert alert-success col-sm-4" role="success">{{ message }}</div>
     {% endfor %}
 
     {% block body %}{% endblock %}
@@ -25,18 +25,19 @@
     <h2>Login</h2>
 
     {% if error %}
-      <p class="error"><strong>Error:</strong> {{ error }}</p>
+      <p class="alert alert-danger col-sm-4" role="danger"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
 
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="{{ url_for('login') }}" class="form-group" method="post">
       <dl>
         <dt>Username:</dt>
-        <dd><input type="text" name="username"></dd>
+        <dd><input type="text" name="username" class="form-control col-sm-4"></dd>
         <dt>Password:</dt>
-        <dd><input type="password" name="password"></dd>
-        <dd><input type="submit" value="Login"></dd>
+        <dd><input type="password" name="password" class="form-control col-sm-4"></dd>
+        <dd><input type="submit" class="btn btn-primary" value="Login"></dd>
       </dl>
     </form>
   </div>
+  <script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
 </body>
 </html>
